tests/ui/traits/const-traits/const-check-fns-in-const-impl.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-check-fns-in-const-impl.rs:3:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0015]: cannot call non-const fn `non_const` in constant functions
  --> $DIR/const-check-fns-in-const-impl.rs:14:16
   |
LL |     fn foo() { non_const() }
   |                ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0015`.
